--- a/src/app/features/gallery/components/media-adder/media-drawer/media-drawer.component.css
+++ b/src/app/features/gallery/components/media-adder/media-drawer/media-drawer.component.css
@@ -40,6 +40,7 @@ form {
   width: 100%;
   height: 100%;
   z-index: 0;
+  cursor: pointer;
 }
 
 .bottom-input {
