--- a/src/app/features/gallery/pages/gallery/gallery-page.component.css
+++ b/src/app/features/gallery/pages/gallery/gallery-page.component.css
@@ -7,9 +7,6 @@
   font: 700 40pt "Lexend";
 }
 
-.stats {
-  margin-left: 5px;
-}
 
 .user {
   display: flex;
